--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   
-<!-- Mirrored from findmatthew.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Apr 2020 07:06:24 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+><meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
     <title></title>
     <meta
